feat: implement the task group domain
Implements the task group domain with the associated RESTful
endpoints and the business service. In addition, persistence and
the possibility of requesting the OpenAPI specification are taken
care of.
